product select icons

--- a/pages/index.html
+++ b/pages/index.html
@@ -2041,6 +2041,64 @@
                   <div class="product__item-price text-center">8123,99 €</div>
                 </div>
               </div>
+
+              <div class="product__page d-flex justify-content-between">
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination align-items-center">
+                    <li class="page-item">
+                      <a class="page-link" id="img-page1" href="#">
+                        <img
+                          src="./../images/icons/left_arrow.svg"
+                          alt="Previous"
+                        />
+                      </a>
+                    </li>
+                    <p>Page</p>
+                    <div
+                      class="page-number d-flex align-items-center justify-content-center"
+                    >
+                      <span>1</span>
+                    </div>
+                    <p>of 128</p>
+                    <li class="page-item">
+                      <a class="page-link" id="img-page2" href="#">
+                        <img
+                          src="./../images/icons/right_arrow.svg"
+                          alt="Next"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+
+                <div class="product__page-select">
+                  <div class="dropdown">
+                    <button
+                      class="btn btn-secondary dropdown-toggle"
+                      type="button"
+                      id="dropdownMenuButton4"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      50
+                      <img
+                        src="./../images/icons/icn_arrow_stroke.svg"
+                        alt="arrow"
+                      />
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuButton1"
+                    >
+                      <li><a class="dropdown-item" href="#">100</a></li>
+                      <li><a class="dropdown-item" href="#">200</a></li>
+                      <li>
+                        <a class="dropdown-item" href="#">300</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
